--- a/app/src/main/res/layout/quiz_result.xml
+++ b/app/src/main/res/layout/quiz_result.xml
@@ -13,119 +13,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/abril_fatface"
-        android:text="MemorySpark"
+        android:text="Riwayat Hasil Quiz"
         android:textColor="#4A5C92"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.559"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="42dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="32dp"
-        android:foregroundGravity="left"
-        app:layout_constraintEnd_toStartOf="@+id/tvNama"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/memoryspark"
-        tools:ignore="MissingConstraints" />
-
-    <FrameLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerView"
+        android:name="com.sam.memspark.HasilQuizFragment"
         android:layout_width="360sp"
         android:layout_height="430sp"
         android:layout_marginTop="32dp"
-        android:background="#DBE1FF"
-        android:backgroundTint="#DBE1FF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNama">
-
-        <ProgressBar
-            android:id="@+id/progressBar2"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="249dp"
-            android:layout_height="215dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="15sp"
-            android:indeterminateTint="#435B9F" />
-
-        <TextView
-            android:id="@+id/tvCongrats"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|top"
-            android:layout_marginTop="30sp"
-            android:fontFamily="@font/abril_fatface"
-            android:freezesText="false"
-            android:password="false"
-            android:text="Great job, you’re almost there!"
-            android:textColor="#435B9F"
-            android:textSize="24sp" />
-
-        <FrameLayout
-            android:layout_width="140sp"
-            android:layout_height="96sp"
-            android:layout_gravity="bottom"
-            android:layout_marginLeft="15sp"
-            android:layout_marginBottom="15sp"
-            android:background="#4A5C92">
-
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10sp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Correct Answer"
-                android:textColor="#FFFFFF" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5sp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="12"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp" />
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="140sp"
-            android:layout_height="96sp"
-            android:layout_gravity="bottom|right"
-            android:layout_marginRight="15sp"
-            android:layout_marginBottom="15sp"
-            android:background="#FFFFFF">
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="10sp"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Wrong Answer"
-                android:textColor="#4A5C92" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="5sp"
-                android:text="3"
-                android:textColor="#4A5C92"
-                android:textSize="24sp" />
-        </FrameLayout>
-
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/tvNama" />
 
     <ImageButton
         android:id="@+id/ibHome"
@@ -140,4 +43,23 @@
         app:tint="#4A5C92"
         tools:ignore="MissingConstraints" />
 
+    <TextView
+        android:id="@+id/tvNamaDeckHasil"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="4dp"
+        android:text="Deck : Nama Deck"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="25dp"
+        android:text="dd/mm/yyyy"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
